--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+*-lock.json
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -102,3 +103,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+*.dev
+*/node_modules/
+*/.expo/
+*/.expo-shared/
+/.idea/
